--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=cafe-management-backend
 server.port=8080
 
+#sprig security setting
+spring.security.user.name=bk
+spring.security.user.password=12345asd
+
 #database setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cafe_database
