--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,13 @@
 			<version>2.5.6</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
