--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
+#mail SMTP setting
+    #host mail name
+spring.mail.host=smtp.gmail.com
+    #my email
+spring.mail.username=janjao937@gmail.com
+    #port 587=gmail
+spring.mail.port=587
+    #SMTP password login server
+    #generate password from "https://myaccount.google.com/apppasswords" (2024)
+spring.mail.password=rvng sziu inem gprs
+    #SMTP auth
+spring.mail.properties.mail.smtp.auth=true
+    #Upgrades an insecure SMTP connection
+spring.mail.properties.mail.smtp.starttls.enable=true
